Fix Java 16 compiler deprecation warnings